# audiomdb

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: ci.yaml
config_files/: run.yaml
src/audiomdb/converters/: __init__.py  base.py  file_converter.py  hf.py  hf_converter.py  local.py
src/audiomdb/data/: __init__.py  base.py
src/audiomdb/processors/: __init__.py  audiomentations.py  base.py  whisper.py
src/audiomdb/retrievers/: __init__.py  base.py  cache_manager.py  gcp.py  hf.py  local.py  s3.py
src/audiomdb/uploaders/: __init__.py  base.py  gcp.py  hf.py  s3.py
src/converters/: __init__.py  base.py  file_converter.py  hf_converter.py
src/processors/: __init__.py  audiomentations.py  whisper.py
tests/: conftest.py  test_base_converter.py  test_file_converter.py  test_hf_converter.py  test_main.py  test_processors.py
tests/converters/: test_base_converter.py  test_file_converter.py  test_hf_converter.py
tests/processors/: test_processors.py
